--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,10 @@
 title: Home
-author:
-  name: Andrew Friedemann
-  email: andrewsfriedemann@gmail.com
+author: Andrew Friedemann
+email: andrewsfriedemann@gmail.com
+ur: https://www.andrewfriedemann.com/
 headline: https://github.com/andrewfriedemann
 description: A site built with Jekyll, hosted by GitHub Pages.
-
-minima:
-  skin: dark
-  social_links:
-    github: andrewfriedemann
-    linkedin: andrew-friedemann
+github_username: andrewfriedemann
+linkedin_username: andrew-friedemann
 
 theme: minima
