--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Home
 author: Andrew Friedemann
 email: andrewsfriedemann@gmail.com
-ur: https://www.andrewfriedemann.com/
+url: https://www.andrewfriedemann.com/
 headline: https://github.com/andrewfriedemann
 description: A site built with Jekyll, hosted by GitHub Pages.
 github_username: andrewfriedemann
