--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,15 @@
 title: Home
-author: Andrew Friedemann
-email: andrewsfriedemann@gmail.com
+author: 
+  name: Andrew Friedemann
+  email: andrewsfriedemann@gmail.com
 url: https://www.andrewfriedemann.com
 description: A site built with Jekyll, hosted by GitHub Pages.
-github_username: andrewfriedemann
-linkedin_username: andrew-friedemann
+
+minima:
+  social_links:
+    github: andrewfriedemann
+    linkedin: andrew-friedemann
+
 header_pages:
   - about.md
 
